# BitonicSort

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  main.cpp  test_gen.cpp
.github/workflows/: ci.yml
OnCPU/include/: bitonic_sort.h
OnCPU/unit_tests/: CMakeLists.txt  main.cpp
OnCPU/unit_tests/src/: unit_tests.cpp
OnCPU/unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
OnGPU/: CMakeLists.txt  main.cpp
OnGPU/include/: bitonic_sort.h  opencl.hpp
OnGPU/kernels/: bitonic_sort.cl
OnGPU/unit_tests/: CMakeLists.txt
OnGPU/unit_tests/test_utils /include/: test_utils.h  test_utils_detail.h
examples/: gen_multi_match.py  gen_test.py
include/: bitonic_cpu.h  bitonic_sort.h  multi_match_common.h  multi_match_cpu.h  multi_match_gpu.h
kernels/: bitonic_sort.cl  multi_match.cl
src/: bench_cpu.cpp  main.cpp  multi_match_bench_cpu.cpp  multi_match_main.cpp
src/bitonic/: bench_gpu.cpp
src/multi_match/: main.cpp  multi_match_bench_cpu.cpp  multi_match_bench_gpu.cpp
unit_tests/: CMakeLists.txt
unit_tests/data/multi_match/bd_tests/: test_1000000.ans  test_10000000.ans
unit_tests/data/multi_match/common/: test_1000.ans  test_1500.ans  test_15000.ans
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
utils/: dump.h  log.h  utils.h
